# llm-knife

./: .gitignore  README.md  pyproject.toml
llm_knife/config/: settings.py
llm_knife/core/: llm_manager.py
llm_knife/models/: base.py
llm_knife/models/aws/: anthropic_model.py
llm_knife/models/azure/: openai_model.py
llm_knife/tests/utils/: mock_llm.py
